manifests/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bitcoin-price
  name: bitcoin-price
  namespace: bitcoin-price
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: bitcoin-price
