manifests/04-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: bitcoin-price.shmead.co.uk
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
  labels:
    app: bitcoin-price
  name: bitcoin-price
  namespace: bitcoin-price
spec:
  rules:
  - host: bitcoin-price.shmead.co.uk
    http:
      paths:
      - backend:
          serviceName: bitcoin-price
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - bitcoin-price.shmead.co.uk
    secretName: bitcoin-price-certificate
